# cmake_bp

./: .gitignore  CMakeLists.txt  README.md
include/: example.h
src/: foo.cpp
